log
Thu Mar 19 06:54:48 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
ebf349b
Thu Mar 19 07:20:50 PM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   59 |       contador+= dato;
      |               ^~
26ee3eb
Thu Mar 19 07:21:27 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:11: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Wint-conversion]
   64 |    return contador;
      |           ^~~~~~~~
fd19e0d
Thu Mar 19 07:21:53 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:15: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
   57 |    while(dato != NULL){
      |               ^
exercises.c:55:9: note: ‘dato’ was declared here
   55 |    int *dato;
      |         ^~~~
cc1: all warnings being treated as errors
5404995
Thu Mar 19 07:24:18 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:15: error: comparison between pointer and integer [-Werror]
   57 |    while(dato != NULL){
      |               ^~
exercises.c:58:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   58 |       dato = first(L);
      |            ^
exercises.c:59:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   59 |       contador+= *dato;
      |                  ^~~~~
exercises.c:61:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   61 |       dato = next(L);
      |            ^
cc1: all warnings being treated as errors
056f455
